--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "certification-backend",
   "version": "1.0.0",
-  "description": "Backend API for blockchain certification system",
+  "description": "Enhanced Backend API for blockchain certification system with WOW features",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -10,17 +10,24 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
+    "bcryptjs": "^2.4.3",
+    "canvas": "^2.11.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
-    "ethers": "^6.7.1",
+    "ethers": "^5.7.2",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "helmet": "^7.1.0",
+    "jimp": "^0.22.10",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
     "multer": "^1.4.5-lts.1",
     "pdfkit": "^0.13.0",
     "qrcode": "^1.5.3",
-    "uuid": "^9.0.0"
+    "sharp": "^0.32.6",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "jest": "^29.6.2",
@@ -32,13 +39,11 @@
     "certification",
     "express",
     "mongodb",
-    "ethereum"
+    "ethereum",
+    "pdf-generation",
+    "qr-code",
+    "image-processing"
   ],
   "author": "Your Name",
   "license": "MIT"
 }
-
-
-
-
-
